ui-tests/tests/ui/bad_ident.stderr
error: expected an identifier, but found `"potato"`
 --> $DIR/bad_ident.rs:6:5
  |
6 |     "potato" = potato
  |     ^^^^^^^^
